<resources>
    <string name="app_name">EzyFood</string>
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="top_up">Top Up</string>
    <string name="item_name">Name</string>
    <string name="item_price">Price</string>
    <string name="item_description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="list_of_items">List of Items</string>
    <string name="stock">Stock</string>
    <string name="item_quanity">Item Quantity</string>
    <string name="number">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="x">X</string>
    <string name="order_more">Order More</string>
    <string name="subtotal">Subtotal</string>
    <string name="pay_now">Pay Now</string>
    <string name="delete">Delete</string>
    <string name="carts">Shopping Carts</string>
    <string name="total_payment">Total Payment :</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="empty">Empty Cart</string>
    <string name="back_to_main_menu">Main Menu</string>
    <string name="complete">Your Order Complete</string>
    <string name="thank_you">Thank You</string>
    <string name="title_activity_maps">Map</string>
    <string name="balance">Balance</string>
</resources>