<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="8dp">

    <androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cart_card_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cart_item_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_foods"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/foods" />
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/cart_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@drawable/shape_oval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/delete" />

        <TextView
            android:id="@+id/cart_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/cart_card_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cart_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/item_description"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/cart_card_image"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_name" />

        <TextView
            android:id="@+id/cart_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/item_price"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/cart_card_image"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_description" />

        <TextView
            android:id="@+id/x_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/x"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/cart_item_price"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_description" />

        <TextView
            android:id="@+id/cart_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/number"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/x_text"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_description" />

        <TextView
            android:id="@+id/subtotal_text"
            android:layout_width="65dp"
            android:layout_height="17dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/subtotal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/cart_card_image"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_price" />

        <TextView
            android:id="@+id/cart_item_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/subtotal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_price" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/soft_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtotal_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</FrameLayout>