<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wheat"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/foods_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="20dp"
            android:background="@drawable/shape_oval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:contentDescription="@string/foods"
                android:scaleType="fitStart"
                android:src="@drawable/ic_foods"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="50dp"
                android:text="@string/foods"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/drinks_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="20dp"
            android:background="@drawable/shape_oval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foods_button">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:contentDescription="@string/drinks"
                android:scaleType="fitStart"
                android:src="@drawable/ic_drinks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="50dp"
                android:text="@string/drinks"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/snacks_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="20dp"
            android:background="@drawable/shape_oval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drinks_button">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:contentDescription="@string/snacks"
                android:scaleType="fitStart"
                android:src="@drawable/ic_snacks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="50dp"
                android:text="@string/snacks"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/top_up_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="20dp"
            android:background="@drawable/shape_oval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/snacks_button">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:contentDescription="@string/top_up"
                android:scaleType="fitStart"
                android:src="@drawable/ic_payment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="50dp"
                android:text="@string/top_up"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
